[package]
name = "llmproxy"
version = "0.0.1"
description = "Unified model API bridge — proxy any model through any protocol (Anthropic/OpenAI/Gemini)"
authors = ["iannil"]
license = "MIT"
repository = "https://github.com/iannil/llmproxy"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "llmproxy"
crate-type = ["lib"]
doctest = false

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal", "fs"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
hyper-rustls = { version = "0.27", features = ["http1", "tls12", "ring", "webpki-tokio"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
httparse = "1"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
rustls-native-certs = "0.8"
regex = "1.10"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
url = "2.5"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
once_cell = "1.21.3"
rust_decimal = "1.33"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
